--- a/index.html
+++ b/index.html
@@ -617,11 +617,10 @@
                         data-animation="fadeInUpShorter"
                         data-animation-delay="1.0s"
                       >
-                        Lunc is the next revolutionary token that will help mass
-                        adoption of Ethereum across the globe. Creating a
-                        gateway for payment and network of institutional
-                        investors that will pave the way for $ETHF on the ERC-20
-                        blockchain.
+                        Experience timeless elegance with Luna Classic, where
+                        tradition meets modern sophistication. Crafted with
+                        exquisite attention to detail, Luna Classic offers a
+                        symphony of style and comfort.
                         <br /><br />
                         <span class="ca_txt"> CA: xxxxxxxxxxxxxxxxxxxxxx</span>
                       </p>
@@ -752,16 +751,18 @@
                         class="mobile_center_align"
                         style="color: white; font-size: 16px"
                       >
-                        Lunc takes a model familiar to Bitcoiners, and stands it
-                        up for our initial release. Lunc is the Ethereum network
-                        in its barest form: an interface to mine Ether, and a
-                        way to upload and execute contracts. The main use of
-                        Lunc on the launch trajectory is to get mining
-                        operations and Ether exchanges running, so the community
-                        can get their mining rigs started, and to start to
-                        establish a “live” environment where people can test
-                        DApps and acquire Ether to upload their own
-                        software into Ethereum.
+                        "Luna Classic embodies the essence of timeless
+                        sophistication and refined luxury. Our brand is
+                        synonymous with elegance, offering a curated selection
+                        of classic designs that transcend trends and endure
+                        through the ages. Each piece is meticulously crafted
+                        with the utmost attention to detail, ensuring
+                        unparalleled quality and comfort. Whether you're seeking
+                        to elevate your everyday wardrobe or add a touch of
+                        opulence to a special occasion, Luna Classic invites you
+                        to indulge in the artistry of timeless style. Embrace
+                        the grace and allure of tradition with Luna Classic,
+                        where enduring beauty meets modern sensibility."
                       </p>
                     </div>
                   </div>
@@ -1140,7 +1141,7 @@
                 Phase 1
               </h2>
               <ul class="p-0 m-0" style="color: #999; list-style-type: square">
-                <li>Uniswap Launch</li>
+                <li>Raydium Launch</li>
                 <li>The Inception of the Idea</li>
                 <li>Community Forming</li>
                 <li>Decentralized Approach</li>
