--- a/index.html
+++ b/index.html
@@ -199,11 +199,7 @@
     >
       <ul>
         <li>
-          <a
-            href="https://www.dextools.io/app/en/ether/pair-explorer/0x983ae12fab055590c251b275275bbee086899fad"
-            target="_blank"
-            title="See Charts"
-          >
+          <a href="chartlink" target="_blank" title="See Charts">
             <i class="far fa-chart-bar" aria-hidden="true"></i>See Charts</a
           >
         </li>
@@ -350,7 +346,7 @@
                 >
                   <a
                     class="nav-link"
-                    href="https://www.dextools.io/app/en/ether/pair-explorer/0x983ae12fab055590c251b275275bbee086899fad"
+                    href="chartlink"
                     style="text-align: center"
                     >Live Chart&nbsp;&nbsp;</a
                   >
@@ -433,9 +429,7 @@
                   >
                 </li>
                 <li class="nav-item utillink">
-                  <a
-                    class="nav-link"
-                    href="https://www.dextools.io/app/en/ether/pair-explorer/0x983ae12fab055590c251b275275bbee086899fad"
+                  <a class="nav-link" href="chartlink"
                     ><i class="far fa-chart-bar" aria-hidden="true"></i> See
                     Charts</a
                   >
@@ -622,7 +616,9 @@
                         exquisite attention to detail, Luna Classic offers a
                         symphony of style and comfort.
                         <br /><br />
-                        <span class="ca_txt"> CA: xxxxxxxxxxxxxxxxxxxxxx</span>
+                        <span class="ca_txt">
+                          CA: FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq</span
+                        >
                       </p>
                       <p
                         class="animated welcome-text"
