--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
     >
       <ul>
         <li>
-          <a href="chartlink" target="_blank" title="See Charts">
+          <a
+            href="https://dexscreener.com/solana/FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq"
+            target="_blank"
+            title="See Charts"
+          >
             <i class="far fa-chart-bar" aria-hidden="true"></i>See Charts</a
           >
         </li>
@@ -346,7 +350,7 @@
                 >
                   <a
                     class="nav-link"
-                    href="chartlink"
+                    href="https://dexscreener.com/solana/FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq"
                     style="text-align: center"
                     >Live Chart&nbsp;&nbsp;</a
                   >
@@ -423,13 +427,15 @@
                     }
                   </style>
                   <a
-                    href="https://app.uniswap.org/#/swap?exactField=input&exactAmount=1&inputCurrency=ETH&outputCurrency=0x00000000000000000000000000000"
+                    href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq&fixed=in"
                     class="neon-button"
                     >Buy Now</a
                   >
                 </li>
                 <li class="nav-item utillink">
-                  <a class="nav-link" href="chartlink"
+                  <a
+                    class="nav-link"
+                    href="https://dexscreener.com/solana/FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq"
                     ><i class="far fa-chart-bar" aria-hidden="true"></i> See
                     Charts</a
                   >
@@ -626,7 +632,7 @@
                         data-animation-delay="1.3s"
                       >
                         <a
-                          href="https://app.uniswap.org/#/swap?exactField=input&exactAmount=1&inputCurrency=ETH&outputCurrency=0x00000000000000000000000000000"
+                          href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FtcwvP3Xq9GapJVwXP82x4MU2MKoZ8RZUsshMGXY2cNq&fixed=in"
                           target="_blank"
                           class="btn btn-lg btn-gradient-orange btn-round btn-glow1"
                           style="
